Makefile で all ターゲット時に .depend をいちいち作り直さないように
いずれ Makefile はまともに書き直した方がよさそう

あと ja.po は、msgmerge を make ごとに行っているため、頻繁に
"POT-Creation-Date: 2005-10-24 01:35+0900\n"
の行がかわる。これだけが変わってる場合は更新として扱わないようにスクリプトを書くなりする必要があるかも

--- a/src/tools/krkrfont/Makefile
+++ b/src/tools/krkrfont/Makefile
@@ -134,21 +134,21 @@ $(PREC_GCH) : $(PREC_H)
 $(CP932_OUT_CPP) $(CP932_OUT_H) : $(CP932_IN)
 	(cd cp932map && $(PERL) conv.pl && $(PERL) conv_r.pl)
 
-depend: .depend
+depend: $(CPPFILES) .depend
 	$(RM)   .depend
 	$(MAKE) .depend
 
-.depend: $(CPPFILES)
+.depend:
 	$(CXX) -E -MM $(CPPFLAGS) $(CPPFILES)  > .depend
 
 ifeq (.depend,$(wildcard .depend))
 
 all: $(BIN)
-include .depend
+-include .depend
 
 else
 
-all: .depend $(BIN)
-include .depend
+all:  $(CPPFILES) .depend $(BIN)
+-include .depend
 
 endif
