プレビューで、現在選択されているFaceが保持しているグリフのみを表示するように(フォントが実際に持っている文字コードマッピングは、実際には文字コードが対応していないグリフが所々にあったりするため) そのほか、細かい修正

--- a/src/tools/krkrfont/Makefile
+++ b/src/tools/krkrfont/Makefile
@@ -84,6 +84,7 @@ CPPINCLUDE = \
 CPPFLAGS = $(CPPINCLUDE) \
 	-g \
 	-O0 \
+	-Winvalid-pch \
 	-mwindows -mconsole \
 	-mthreads -fno-pcc-struct-return -fstrict-aliasing -Wall \
 	-D__WXMSW__ -D__GNUWIN32__ -D_UNICODE -DUNICODE -DWXUSINGDLL
