デバッグ版とリリース版を切り替えて(Makefileを編集して)コンパイルできるように
Refs #6

--- a/src/tools/krkrfont/Makefile
+++ b/src/tools/krkrfont/Makefile
@@ -1,5 +1,8 @@
 BIN=krkrfont.exe
 
+DEBUG=yes
+
+
 MINGWROOT = C:/MinGW
 CXX = g++
 WINDRES = windres
@@ -13,13 +16,24 @@ SED = sed
 FIND = find
 SH = sh
 
+ifeq ($(DEBUG),yes)
+DEBUG_LIB_SUFFIX=d
+DEBUG_CFLAGS=-O0 -D__WXDEBUG__ -g -mconsole
+WX_CONFIG_INCLUDE_NAME=debug
+else
+DEBUG_LIB_SUFFIX=
+DEBUG_CFLAGS=-O2 -g -mwindows
+WX_CONFIG_INCLUDE_NAME=release
+endif
+
+
 LIBS = -L"$(MINGWROOT)/lib"  \
 	-mwindows -Wl,--enable-auto-import \
-	-lwx_baseu-2.6.dll \
-	-lwx_mswu_core-2.6.dll \
-	-lwx_mswu_adv-2.6.dll \
-	-lwx_mswu_xrc-2.6.dll \
-	-lwx_baseu_xml-2.6.dll \
+	-lwx_baseu$(DEBUG_LIB_SUFFIX)-2.6.dll \
+	-lwx_mswu$(DEBUG_LIB_SUFFIX)_core-2.6.dll \
+	-lwx_mswu$(DEBUG_LIB_SUFFIX)_adv-2.6.dll \
+	-lwx_mswu$(DEBUG_LIB_SUFFIX)_xrc-2.6.dll \
+	-lwx_baseu$(DEBUG_LIB_SUFFIX)_xml-2.6.dll \
 	-lfreetype \
 	-lunicows \
 	-lkernel32 \
@@ -75,21 +89,19 @@ LINKOBJS = $(OBJS)
 
 CPPINCLUDE = \
 	-I"$(MINGWROOT)/include" \
-	-I"$(MINGWROOT)/lib/wx/include/msw-unicode-release-2.6" \
+	-I"$(MINGWROOT)/lib/wx/include/msw-unicode-$(WX_CONFIG_INCLUDE_NAME)-2.6" \
+	-I"$(MINGWROOT)/include/wx-2.6" \
 	-I"$(MINGWROOT)/include/freetype2" \
 	-I"msw" \
 	-I"."
 
-CPPFLAGS = $(CPPINCLUDE) \
-	-g \
-	-O0 \
+CPPFLAGS = $(CPPINCLUDE) $(DEBUG_CFLAGS) \
 	-Winvalid-pch \
-	-mwindows -mconsole \
 	-mthreads -fno-pcc-struct-return -fstrict-aliasing -Wall \
 	-D__WXMSW__ -D__GNUWIN32__ -D_UNICODE -DUNICODE -DWXUSINGDLL
 
 
-LDFLAGS = -g -mwindows -mconsole
+LDFLAGS = $(CPPFLAGS)
 
 default: all
 
